MDEV-9487: Server crashes in Time_and_counter_tracker::incr_loops with UNION in ALL subquery

Do not mark subquery as inexpensive when it is not optimized.